--- a/src/app/pages/customers-page/customer-view/customer-add-new/customer-add-new.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-add-new/customer-add-new.component.html
@@ -9,7 +9,7 @@
   <div class="entity-view__card__content customer-add__content">
     <div class="flex-custom">
       <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !customer.firstName">
-        <input md-input name="firstName" [(ngModel)]="customer.firstName" placeholder="{{'FORMINPUTS_FIRSTNAME' | translate}}" required type="text">
+        <input autoFocus md-input name="firstName" [(ngModel)]="customer.firstName" placeholder="{{'FORMINPUTS_FIRSTNAME' | translate}}" required type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !customer.lastName">
