--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-add-new/product-schedule-add-new.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-add-new/product-schedule-add-new.component.html
@@ -11,7 +11,7 @@
 
   <form #productScheduleInputForm="ngForm" style="font-size: 14px;" class="entity-view__card__content">
     <md-input-container [class.error]="formInvalid && !entity.name">
-      <input [disabled]="mode === view" required md-input placeholder="{{'PRODUCTSCHEDULE_INFO_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
+      <input autoFocus [disabled]="mode === view" required md-input placeholder="{{'PRODUCTSCHEDULE_INFO_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
     </md-input-container>
 
     <autocomplete-input class="default-autocomplete-input--full-width"
