enable navigation from report pages

--- a/src/app/reports/merchant-report/merchant-report.component.html
+++ b/src/app/reports/merchant-report/merchant-report.component.html
@@ -28,6 +28,7 @@
   [page]="page"
   [paginationString]="getPaginationString()"
   [showFilter]="false"
+  (cellClicked)="clicked($event)"
   (next)="fetchNext()"
   (previous)="fetchPrevious()"
   (updateLimit)="updateLimit($event)"
