--- a/src/app/reports/transactions-report/transactions-report.component.html
+++ b/src/app/reports/transactions-report/transactions-report.component.html
@@ -39,6 +39,7 @@
   [page]="page"
   [paginationString]="getPaginationString()"
   [showFilter]="false"
+  (cellClicked)="navigate($event.entity)"
   (next)="fetchNext()"
   (previous)="fetchPrevious()"
   (updateLimit)="updateLimit($event)"
