Add affiliate campaigns tab

--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -59,7 +59,7 @@
 
     <md-tab>
       <div class="tab-container">
-        <coming-soon [inPage]="true"></coming-soon>
+        <affiliate-campaigns [affiliateId]="entity.id"></affiliate-campaigns>
       </div>
     </md-tab>
 
