--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-campaigns/affiliate-campaigns.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-campaigns/affiliate-campaigns.component.html
@@ -1,16 +1,12 @@
 <div class="entity-view__table-component">
   <div class="entity-view__table-component__header entity-view__table-component__header--homepage">
-    <div class="entity-view__table-component__header__title">Associated Campaigns</div>
-    <md-icon class="entity-view__table-component__header__action alone" [md-menu-trigger-for]="optionsMenu">more_vert</md-icon>
-    <md-menu #optionsMenu="mdMenu" x-position="before">
-      <button md-menu-item (click)="addNewCampaign()" >Add New</button>
-    </md-menu>
+    <div class="entity-view__table-component__header__title">{{'AFFILIATE_CAMPAIGN_TITLE' | translate}}</div>
   </div>
   <table class="highlight table__custom">
     <thead>
     <tr>
       <th *ngFor="let params of columnParams" (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'">
-        {{params.label}}
+        {{params.label | translate}}
         <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
       </th>
       <th></th>
@@ -23,20 +19,23 @@
         <div class="codeblock" *ngIf="params.code; else noCode">
           {{params.mappingFunction(entity)}}
         </div>
-        <ng-template #noCode>{{params.mappingFunction(entity)}}</ng-template>
+        <ng-template #noCode>
+          <ng-container *ngIf="params.number; else nan">{{params.mappingFunction(entity) | numberlocale}}</ng-container>
+          <ng-template #nan>{{params.mappingFunction(entity)}}</ng-template>
+        </ng-template>
       </td>
       <td>
         <button md-icon-button [md-menu-trigger-for]="actionsMenu"><md-icon>more_vert</md-icon></button>
         <md-menu #actionsMenu="mdMenu" x-position="before">
-          <button md-menu-item [routerLink]="['/campaigns', entity.id]">View Campaign</button>
+          <button md-menu-item [routerLink]="['/campaigns', entity.id]">{{'AFFILIATE_CAMPAIGN_VIEW' | translate}}</button>
         </md-menu>
       </td>
     </tr>
     </tbody>
   </table>
 
-  <md-spinner class="entity-view__spinner" *ngIf="loadingData && (!entities || entities.length === 0)"></md-spinner>
-  <div *ngIf="!loadingData && (!entities || entities.length === 0)" class="entity-view__no-results entity-view__no-results--table">No campaigns found</div>
+  <table-loader *ngIf="loadingData && (!entities || entities.length === 0)"></table-loader>
+  <div *ngIf="!loadingData && (!entities || entities.length === 0)" class="entity-view__no-results entity-view__no-results--table">{{'AFFILIATE_CAMPAIGN_NODATA' | translate}}</div>
 
   <table-pagination
     [limit]="limit"
