--- a/src/app/shared/components/simple-dropdown/simple-dropdown.component.html
+++ b/src/app/shared/components/simple-dropdown/simple-dropdown.component.html
@@ -3,7 +3,7 @@
   <div class="simple-dropdown" [class.simple-dropdown--active]="dropdownVisible">
     <div class="simple-dropdown__header" [class.simple-dropdown__header--active]="dropdownVisible" (click)="toggleDropdown()">
       <md-icon *ngIf="icon" class="simple-dropdown__header__icon">{{icon}}</md-icon>
-      <span class="simple-dropdown__header__value">{{mapper(selectedOption)}}</span>
+      <span [style.min-width]="getWidth()" class="simple-dropdown__header__value">{{mapper(selectedOption)}}</span>
       <md-icon class="simple-dropdown__header__arrow" [class.simple-dropdown__header__arrow--disabled]="getOptions().length === 0" [class.arrow--rotate]="dropdownVisible">keyboard_arrow_down</md-icon>
     </div>
 
