Update shipping receipt statuses

--- a/src/app/pages/components/entities-table/entities-table.component.html
+++ b/src/app/pages/components/entities-table/entities-table.component.html
@@ -22,7 +22,10 @@
         </div>
         <ng-template #noCode>
           <ng-container *ngIf="param.number; else nan">{{param.mappingFunction(entity) | numberlocale}}</ng-container>
-          <ng-template #nan>{{param.mappingFunction(entity)}}</ng-template>
+          <ng-template #nan>
+            <ng-container *ngIf="param.translate; else notranslate">{{param.mappingFunction(entity) | translate}}</ng-container>
+            <ng-template #notranslate>{{param.mappingFunction(entity)}}</ng-template>
+          </ng-template>
         </ng-template>
       </td>
       <td>
