--- a/src/app/pages/components/table-memory/table-memory.component.html
+++ b/src/app/pages/components/table-memory/table-memory.component.html
@@ -33,7 +33,10 @@
         <ng-template #noCode>
           <div [class.flex-custom]="params.copy" [class.flex-custom--center]="params.copy">
             <ng-container *ngIf="params.number; else nan">{{params.mappingFunction(entity) | numberlocale}}</ng-container>
-            <ng-template #nan>{{params.mappingFunction(entity)}}</ng-template>
+            <ng-template #nan>
+              <ng-container *ngIf="params.translate; else notranslate">{{params.mappingFunction(entity) | translate}}</ng-container>
+              <ng-template #notranslate>{{params.mappingFunction(entity)}}</ng-template>
+            </ng-template>
             <md-icon *ngIf="params.copy" class="copy-icon" md-tooltip="{{'SHARE_COPY' | translate}}" ngxClipboard [cbContent]="params.mappingFunction(entity)">content_copy</md-icon>
           </div>
         </ng-template>
