--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -4,16 +4,16 @@
   <div class="error-page">
     <div class="error-page__header">
       <img class="error-page__header__image" src="/assets/images/sleepingHamster.svg">
-      <span class="error-page__header__title"> Strong Effort. </span>
+      <span class="error-page__header__title"> {{'ERRORPAGE_TITLE' | translate}}</span>
     </div>
 
     <div class="error-page__content">
-      <div> It looks like something broke on our end,</div>
-      <div> or the page you are looking for doesn't exist.</div>
+      <div> {{'ERRORPAGE_SUBTITLE1' | translate}}</div>
+      <div> {{'ERRORPAGE_SUBTITLE2' | translate}}</div>
     </div>
 
     <div class="error-page__contact">
-      <div>If you think you found this page in error please contact <span>support@sixcrm.com</span></div>
+      <div> {{'ERRORPAGE_SUPPORT' | translate}} <a href="mailto:support@sixcrm.com">support@sixcrm.com</a></div>
     </div>
   </div>
 </div>
