--- a/src/app/shared/components/coming-soon/coming-soon.component.html
+++ b/src/app/shared/components/coming-soon/coming-soon.component.html
@@ -4,8 +4,8 @@
   <div class="coming-soon__container">
     <img class="coming-soon__image" src="/assets/images/logo-blue.svg">
     <div class="coming-soon__text">
-      <span>FEATURE</span>
-      <span>IN DEVELOPMENT</span>
+      <span> {{'COMINGSOON_TITLE1' | translate}} </span>
+      <span> {{'COMINGSOON_TITLE2' | translate}}</span>
     </div>
   </div>
 </div>
