Update state machine queries

--- a/src/app/pages/state-machine-page/state-machine-live/state-machine-rebills/state-machine-rebills.component.html
+++ b/src/app/pages/state-machine-page/state-machine-live/state-machine-rebills/state-machine-rebills.component.html
@@ -1,5 +1,5 @@
 <table-memory [showHeader]="false"
-              [data]="entities"
+              [data]="entitiesHolder"
               [columnParams]="columnParams"
               [dissociationEnabled]="false"
               [textOptions]="tableTextOptions"
