--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
@@ -11,6 +11,7 @@
       <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
       <md-menu #editOptions="mdMenu" x-position="before">
         <button md-menu-item (click)="changeMode.emit(modes.Update)">{{'EMAILTEMPLATE_INFO_EDIT' | translate}}</button>
+        <button md-menu-item *ngIf="entity.smtpProvider && entity.smtpProvider.id" [routerLink]="['/smtpproviders', entity.smtpProvider.id]">{{'EMAILTEMPLATE_INFO_VIEWSMTPPROVIDER' | translate}}</button>
       </md-menu>
     </ng-container>
   </div>
