--- a/src/app/pages/credit-cards-page/credit-card-view/credit-card-view.component.html
+++ b/src/app/pages/credit-cards-page/credit-card-view/credit-card-view.component.html
@@ -1,62 +1,39 @@
-<div class="entity-view">
-  <div class="entity-view__title">Credit Card Details</div>
+<div *ngIf="entity; else spinner" class="entity-view">
+  <div class="entity-view__title">{{'CREDITCARD_TITLE' | translate}}</div>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
-  <div *ngIf="entity" class="entity-view__content">
-
-    <div class="entity-view__content__title entity-view__content__title--first"> General Details </div>
-
-    <div class="entity-view__content__fields">
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">ID:</span>
-        <span>{{entity.id}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Name:</span>
-        <span>{{entity.name}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">CC Number:</span>
-        <span>{{entity.ccnumber}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">CCV:</span>
-        <span>{{entity.ccv}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Expiration:</span>
-        <span>{{entity.expiration}}</span>
-      </div>
+  <div class="entity-view__info">
+    <div class="entity-view__info__image">
+      <img src="/assets/images/result-item-creditcard-white.svg" alt="">
     </div>
-
-    <div class="entity-view__content__title"> Address </div>
-
-    <div class="entity-view__content__fields">
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Country:</span>
-        <span>{{entity.address.country}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">State:</span>
-        <span> {{entity.address.state}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">City:</span>
-        <span>{{entity.address.city}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Line 1:</span>
-        <span>{{entity.address.line1}} </span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Line 1:</span>
-        <span>{{entity.address.line2}} </span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Zip:</span>
-        <span>{{entity.address.zip}}</span>
+    <div class="entity-view__info__data">
+      <div class="entity-view__info__data__date">{{'SINGLEPAGE_CREATED' | translate}}: {{entity.createdAt | formatDateTime: 'date-time'}}</div>
+      <div class="entity-view__info__data__name">
+        {{entityBackup.name}}
       </div>
     </div>
   </div>
+
+  <tab-header [elements]="tabHeaders" [selectedIndex]="0"></tab-header>
+
+  <md-tab-group>
+    <md-tab>
+
+      <credit-card-input
+        [creditCard]="entity"
+        [viewMode]="isViewMode"
+        [standalone]="true"
+        (updated)="save($event)"
+        (edit)="enterEditMode()"
+        (cancel)="doCancel()">
+      </credit-card-input>
+
+    </md-tab>
+
+  </md-tab-group>
 </div>
+
+<ng-template #spinner>
+  <spe-loader [numberOfTabs]="1" [cardsExpression]="'380px'" [title]="'CREDITCARD_TITLE' | translate"></spe-loader>
+</ng-template>
