--- a/src/app/pages/credit-cards-page/credit-cards-index/credit-cards.component.html
+++ b/src/app/pages/credit-cards-page/credit-cards-index/credit-cards.component.html
@@ -1,45 +1,28 @@
 <div class="entity-index">
   <div class="entity-index__title">
-    Credit Cards
-    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+    {{'CREDITCARD_INDEX_TITLE' | translate}}
+    <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
   </div>
 
-  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" (click)="openAddMode()" class="entity-index__add"><md-icon>add</md-icon></button>
 
   <md-card class="entity-index__card">
     <md-card-content class="entity-index__card__content">
+      <entities-table
+        [data]="entities"
+        [columnParams]="columnParams"
+        [filterString]="filterValue"
+        [serverError]="serverError"
+        (selected)="viewEntity($event.id)"
 
-      <table class="entity-index__table highlight">
-        <thead class="entity-index__table__header">
-        <tr>
-          <ng-container *ngFor="let params of columnParams">
-            <th (click)="setSortedColumnParams(params)">
-              {{params.label}}
-              <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
-            </th>
-          </ng-container>
-          <th></th>
-        </tr>
-        </thead>
+        [service]="service"
+        (viewClicked)="viewEntity($event.id)"
+        (copyClicked)="copyEntity($event.id)"
+        (exportClicked)="exportEntity($event.id)"
+        (editClicked)="editEntity($event.id)"
+        (deleteClicked)="deleteEntity($event.id)"
+        (refreshData)="refreshData()"
 
-        <tbody>
-        <tr *ngFor="let entity of (entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder)">
-          <td (click)="viewEntity(entity.id)" *ngFor="let param of columnParams">{{param.mappingFunction(entity)}}</td>
-          <td>
-            <table-actions
-              [service]="service"
-              (viewClicked)="viewEntity(entity.id)"
-              (copyClicked)="copyEntity(entity.id)"
-              (exportClicked)="exportEntity(entity.id)"
-              (editClicked)="editEntity(entity.id)"
-              (deleteClicked)="deleteEntity(entity.id)">
-            </table-actions>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-
-      <table-pagination
         [limit]="limit"
         [paginationValues]="paginationValues"
         [previousDisabled]="page <= 0"
@@ -47,7 +30,11 @@
         (previous)="previous()"
         (next)="next()"
         (updateLimit)="updateLimit($event)">
-      </table-pagination>
+      </entities-table>
     </md-card-content>
   </md-card>
+</div>
+
+<div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
+  <credit-card-input class="modal-center" [creditCard]="entity" [addMode]="true" (created)="createEntity($event)" (cancel)="closeAddMode()"></credit-card-input>
 </div>
