--- a/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
+++ b/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
@@ -52,19 +52,35 @@
           </div>
         </div>
 
-        <table-memory
-          [data]="entity.productSchedules"
-          [columnParams]="productScheduleColumnParams"
-          [textOptions]="productScheduleText"
-          [associationEnabled]="false"
-          [editEnabled]="false"
-          [viewEnabled]="true"
-          [dissociationEnabled]="false"
-          [showMenuOptions]="false"
-          (view)="goToProductSchedule($event)">
-        </table-memory>
+        <div>
+          <table-memory
+            [data]="entity.productSchedules"
+            [columnParams]="productScheduleColumnParams"
+            [textOptions]="productScheduleText"
+            [associationEnabled]="false"
+            [editEnabled]="false"
+            [viewEnabled]="true"
+            [dissociationEnabled]="false"
+            [showMenuOptions]="false"
+            (view)="goToProductSchedule($event)">
+          </table-memory>
+        </div>
       </div>
 
+    </md-tab>
+
+    <md-tab>
+      <table-memory
+        [data]="entity.transactions"
+        [columnParams]="transactionColumnParams"
+        [textOptions]="transactionText"
+        [associationEnabled]="false"
+        [editEnabled]="false"
+        [viewEnabled]="true"
+        [dissociationEnabled]="false"
+        [showMenuOptions]="false"
+        (view)="goToTransaction($event)">
+      </table-memory>
     </md-tab>
 
     <md-tab>
@@ -84,5 +100,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="2" [cardsExpression]="'300px;480px'" [title]="'REBILL_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="3" [cardsExpression]="'300px;480px'" [title]="'REBILL_TITLE' | translate"></spe-loader>
 </ng-template>
