Add account id identifier

--- a/src/app/pages/accounts-page/account-view/account-view.component.html
+++ b/src/app/pages/accounts-page/account-view/account-view.component.html
@@ -12,6 +12,10 @@
       <div class="entity-view__info__data__name">
         {{addMode ? 'Create new Account' : entityBackup.name}}
       </div>
+      <div class="entity-view__info__data__other">
+        <span class="entity-view__info__data__other__label">ID:</span>
+        <span>{{entity.id}}</span>
+      </div>
     </div>
   </div>
 
