--- a/src/app/pages/products-page/product-view/product-view.component.html
+++ b/src/app/pages/products-page/product-view/product-view.component.html
@@ -19,14 +19,18 @@
 
   <md-tab-group [(selectedIndex)]="selectedIndex">
     <md-tab>
-      <product-add-new (changeMode)="setMode($event)"
-                       (cancel)="cancelUpdate()"
-                       (deleteEntity)="deleteProduct()"
-                       (save)="save($event)"
-                       [mode]="viewMode ? modes.View : modes.Update"
-                       [price]="entity.defaultPrice.amount + ''"
-                       [entity]="entity">
-      </product-add-new>
+      <div class="flex-custom">
+        <product-add-new (changeMode)="setMode($event)"
+                         (cancel)="cancelUpdate()"
+                         (deleteEntity)="deleteProduct()"
+                         (save)="save($event)"
+                         [mode]="viewMode ? modes.View : modes.Update"
+                         [price]="entity.defaultPrice.amount + ''"
+                         [entity]="entity">
+        </product-add-new>
+
+        <product-attributes [entity]="entity" [mode]="viewMode ? modes.View : modes.Update"></product-attributes>
+      </div>
     </md-tab>
 
     <md-tab>
@@ -43,5 +47,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="3" [cardsExpression]="'435px'" [title]="'PRODUCT_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="3" [cardsExpression]="'435px;350px'" [title]="'PRODUCT_TITLE' | translate"></spe-loader>
 </ng-template>
