--- a/src/app/pages/products-page/product-view/product-attributes/product-attributes.component.scss
+++ b/src/app/pages/products-page/product-view/product-attributes/product-attributes.component.scss
@@ -1,3 +1,12 @@
 dropdown-component {
-  margin-top: 10px;
+  margin-left: auto;
+}
+
+md-input-container {
+  width: 200px;
+}
+
+.attribute-title {
+  margin-right: 10px;
+  font-size: 14px;
 }
