--- a/src/app/pages/products-page/product-view/product-images/product-images.component.scss
+++ b/src/app/pages/products-page/product-view/product-images/product-images.component.scss
@@ -11,31 +11,29 @@
   input {
     font-size: 14px;
   }
-
-  img {
-    margin: 0 auto 15px;
-  }
 }
 
 .image-container {
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
 
   div {
     margin: 10px;
   }
-  img {
-    max-width: 250px;
-    margin: auto;
-  }
 }
 
 .entity-view__card {
-  min-width: 0;
+  min-width: 270px;
 }
 
 .image-wrapper {
   position: relative;
+
+  img {
+    display: flex;
+    max-width: 250px;
+  }
 }
 
 .image-overlay {
@@ -58,10 +56,59 @@
   }
 
   &:hover {
-    background: rgba(0,0,0,0.6);
+    background: rgba(0,0,0,0.5);
 
     md-icon {
       display: block;
     }
+  }
+}
+
+.dropzone {
+  min-height: 100px;
+  border: 2px dotted rgba(0,0,0,0.3);
+  background: rgba(0,0,0,0.05);
+  text-align: center;
+
+  &--file-over {
+    border-color: red;
+  }
+
+  &--with-content {
+    border: none;
+    min-height: 0;
+    background: white;
+
+    span {
+      display: none;
+    }
+  }
+
+  span {
+    margin: auto;
+    font-size: 14px;
+    line-height: 100px;
+  }
+
+  .image {
+    border: 1px solid rgba(0,0,0,0.2);
+
+    &--file-over {
+      border-color: red;
+    }
+  }
+}
+
+.select {
+  margin: 8px 0 0;
+  padding: 5px 10px;
+  background: #5B9BE1;
+  color: #FFFFFF;
+  font-size: 14px;
+  text-align: center;
+  cursor: pointer;
+
+  input {
+    display: none;
   }
 }
