Add default image option

--- a/src/app/dialog-modals/image-dialog/image-dialog.component.scss
+++ b/src/app/dialog-modals/image-dialog/image-dialog.component.scss
@@ -61,3 +61,13 @@
     }
   }
 }
+
+.chbox {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #4f4f4f;
+
+  md-checkbox {
+    margin-right: 10px;
+  }
+}
