--- a/src/app/dialog-modals/image-dialog/image-dialog.component.html
+++ b/src/app/dialog-modals/image-dialog/image-dialog.component.html
@@ -11,6 +11,11 @@
 
     <md-textarea placeholder="{{'PRODUCT_IMAGE_VIEW_DESCRIPTION' | translate}}" [(ngModel)]="image.description"></md-textarea>
 
+    <div class="chbox flex-custom flex-custom--center">
+      <md-checkbox [checked]="image.defaultImage" (change)="image.defaultImage = !image.defaultImage"></md-checkbox>
+      <span>{{'PRODUCT_IMAGE_VIEW_DEFAULT' | translate}}</span>
+    </div>
+
     <div class="buttons">
       <div (click)="save()">{{'PRODUCT_IMAGE_VIEW_SAVE' | translate}}</div>
     </div>
